fixed image blur and radius on ios

--- a/styles/components/_audio-detail.scss
+++ b/styles/components/_audio-detail.scss
@@ -19,4 +19,8 @@
         drop-shadow(6.5px 6.5px 6.5px rgba(0, 0, 0, 0.05))
     );
   }
+
+  .image {
+    transform: translateZ(0);
+  }
 }
